chore(depency): Add depency

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "babel-polyfill": "^6.16.0",
     "bluebird": "^3.4.6",
     "debug": "^2.2.0",
+    "dedent": "^0.6.0",
     "firebase": "^3.5.2",
     "koa": "next",
     "koa-convert": "^1.2.0",
@@ -34,6 +35,7 @@
     "babel-eslint": "^7.0.0",
     "babel-helper-vue-jsx-merge-props": "^2.0.1",
     "babel-loader": "^6.2.5",
+    "babel-plugin-dedent": "^2.0.0",
     "babel-plugin-syntax-jsx": "^6.18.0",
     "babel-plugin-transform-vue-jsx": "^3.1.0",
     "babel-preset-modern-async": "1.0.0-alpha.2",
