--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "babel-polyfill": "^6.16.0",
+    "babel-preset-modern-async": "v1.0.0-alpha.3",
     "bluebird": "^3.4.6",
     "debug": "^2.2.0",
     "dedent": "^0.6.0",
