--- a/package.json
+++ b/package.json
@@ -7,11 +7,11 @@
   "scripts": {
     "start": "NODE_ENV='production' node -r babel-register server.js",
     "serve:dev": "webpack-dashboard -- node -r babel-register server.js",
+    "serve:eazydb": "webpack-dashboard -- DB_ADAPTER='eazydb' node -r babel-register server.js",
     "build:dev": "node -r babel-register build/compile.js"
   },
   "dependencies": {
     "babel-polyfill": "^6.16.0",
-    "babel-preset-modern-async": "v1.0.0-alpha.3",
     "bluebird": "^3.4.6",
     "debug": "^2.2.0",
     "dedent": "^0.6.0",
@@ -21,6 +21,7 @@
     "koa-router": "next",
     "koa-static": "next",
     "koa-websocket": "next",
+    "node-eazydb": "file:eazydb/node-eazydb",
     "observable-socket": "^4.0.0",
     "rethinkdb": "^2.3.3",
     "rxjs": "^5.0.0-rc.1",
@@ -39,7 +40,7 @@
     "babel-plugin-dedent": "^2.0.0",
     "babel-plugin-syntax-jsx": "^6.18.0",
     "babel-plugin-transform-vue-jsx": "^3.1.0",
-    "babel-preset-modern-async": "1.0.0-alpha.2",
+    "babel-preset-modern-async": "v1.0.0-alpha.3",
     "css-loader": "^0.25.0",
     "eslint": "^3.8.1",
     "eslint-config-standard": "^6.2.1",
