--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "license": "MIT",
   "scripts": {
     "start": "NODE_ENV='production' node -r babel-register server.js",
-    "build-depency": "./build-depency.sh",
+    "build-depency": "scripts/build-depency.sh",
     "lint": "eslint .",
     "lint:fix": "eslint --fix .",
     "serve:dev": "webpack-dashboard -- node -r babel-register server.js",
