basic UI, and fakerdata

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "rethinkdb": "^2.3.3",
     "rxjs": "^5.0.0-rc.1",
     "vue": "^2.0.3",
+    "vue-resource": "^1.0.3",
     "vue-router": "^2.0.1",
     "vuex": "^2.0.0",
     "vuex-router-sync": "next",
